vue/vue-deploymnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  vue-deployment
  namespace: default
  labels:
    app: vue
spec:
  selector:
    matchLabels:
      app: vue
  replicas: 1
  template:
    metadata:
      labels:
        app: vue
    spec:
      containers:
      - name:  vue
        image: ghcr.io/nikos-kaparos/crowdfunding-frontend:8e69d47-97
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        ports:
        - containerPort: 80
          name:  vue
      imagePullSecrets:
      - name: ghrc-creds
